--- a/attach_shelf/CMakeLists.txt
+++ b/attach_shelf/CMakeLists.txt
@@ -11,6 +11,7 @@ find_package(rclcpp REQUIRED)
 find_package(geometry_msgs REQUIRED)
 find_package(nav_msgs REQUIRED)
 find_package(sensor_msgs REQUIRED)
+find_package(tf2 REQUIRED)
 
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
@@ -24,7 +25,13 @@ if(BUILD_TESTING)
   ament_lint_auto_find_test_dependencies()
 endif()
 
+add_executable(pre_approach_node src/pre_approach.cpp)
+ament_target_dependencies(pre_approach_node rclcpp geometry_msgs sensor_msgs nav_msgs tf2)
 
+install(TARGETS
+  pre_approach_node
+  DESTINATION lib/${PROJECT_NAME}
+)
 install(DIRECTORY
   launch
   config
