added custom interface

--- a/attach_shelf_srv/CMakeLists.txt
+++ b/attach_shelf_srv/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.8)
-project(attach_shelf)
+project(attach_shelf_srv)
 
 if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic)
@@ -8,11 +8,8 @@ endif()
 # find dependencies
 find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
-find_package(geometry_msgs REQUIRED)
-find_package(nav_msgs REQUIRED)
-find_package(sensor_msgs REQUIRED)
-find_package(tf2 REQUIRED)
-find_package(attach_shelf_srv REQUIRED)
+find_package(std_msgs REQUIRED)
+find_package(rosidl_default_generators REQUIRED)
 
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
@@ -26,20 +23,9 @@ if(BUILD_TESTING)
   ament_lint_auto_find_test_dependencies()
 endif()
 
-add_executable(pre_approach_node src/pre_approach.cpp)
-ament_target_dependencies(pre_approach_node rclcpp geometry_msgs sensor_msgs nav_msgs tf2)
-# add_executable(pre_approach_client_node src/pre_approach_v2.cpp)
-# ament_target_dependencies(pre_approach_client_node rclcpp std_msgs geometry_msgs sensor_msgs attach_shelf_srv)
-
-install(TARGETS
-  pre_approach_node
-#   pre_approach_client_node
-  DESTINATION lib/${PROJECT_NAME}
-)
-install(DIRECTORY
-  launch
-  config
-  DESTINATION share/${PROJECT_NAME}/
+# Generate service interfaces
+rosidl_generate_interfaces(${PROJECT_NAME}
+  "srv/GoToLoading.srv"
 )
 
 ament_package()
