--- a/attach_shelf/package.xml
+++ b/attach_shelf/package.xml
@@ -14,6 +14,7 @@
   <depend>sensor_msgs</depend>
   <depend>nav_msgs</depend>
   <depend>tf2</depend>
+  <depend>tf2_ros</depend>
   <depend>attach_shelf_srv</depend>
 
   <test_depend>ament_lint_auto</test_depend>
