--- a/my_components/package.xml
+++ b/my_components/package.xml
@@ -13,11 +13,13 @@
   <depend>rclcpp_components</depend>
   <depend>composition</depend>
   <depend>std_msgs</depend>
+  <depend>geometry_msgs</depend>
+  <depend>sensor_msgs</depend>
+  <depend>nav_msgs</depend>
   <depend>tf2</depend>
   <depend>tf2_ros</depend>
-  <depend>geometry_msgs</depend>
-  <depend>nav_msgs</depend>
   <depend>std_srvs</depend>
+  <depend>attach_shelf_srv</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
